<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- 开始界面 -->
     <string name="app_name">map</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="gps_status">GPS状态：</string>
     <string name="gpsStatues">GPS未开启</string>
     <string name="startNewProj">开始新记录</string>
     <string name="oldProj">查看记录</string>
      <string name="log_in">登陆</string>
     <string name="tv_login">用户名：</string>
     <string name="tv_cancel">密  码：</string>
     
     <!-- 地图界面 -->
	<string name="NromoMapButton">普通地图</string>
	<string name="SatelliteMapButton">卫星地图</string>
	<string name="addMarker">标点</string>
	<string name="startMap">开始</string>
	 <string name="endMap">结束</string>
	
	<!-- 新建工程界面 -->
	<string name="new_projection_tips">输入新工程名称和描述</string>
	<string name="new_name">工程名称：</string>
	<string name="ednew_projection_name">填写新工程名称</string>
	<string name="desnewproject">工程描述：</string>
	<string name="newpojectok">确定</string>
	<string name="newprojectconcel">取消</string>
	<string name="ednewprojec">输入工程描述</string>
	
	<!-- 地图界面 -->
	<string name="displayProjectName">显示工程名称</string>
	
	<!-- PopupWindow界面 -->
	<string name="popupwindow_Button_saveProject">保存线路</string>
	<string name="popupwindow_Button_abandonProject">放弃线路</string>
	<string name="popupwindow_cancelButton">取消</string>
	
	<!-- 工程列表界面 -->
	<string name="oldProjectActivityReturn">返回</string>
	<string name="oldProjectActivityTitle">我创建的工程</string>
	<string name="oldProjectActivityCheckBox">全选</string>
	<string name="projectName">项目名称：</string>
	<string name="projectID">项目编号：</string>
	<string name="projectCreatedTime">创建时间：</string>
	<string name="oldProjectActivity_post">上传</string>
	<string name="oldProjectActivity_delete">删除</string>
	
	<string name="delet_project">删除该项目</string>
	
	<!-- Maker属性界面 -->
	<string name="tv_marker_attribute">属性：</string>
	<string name="bt_marker_attribute_confrim">确定</string>
	<string name="bt_marker_attribute_concel">取消</string>
	
	<!-- Marker列表界面 -->
	<string name="marker_number">编号：</string>
	<string name="marker_latitude">纬度：</string>
	<string name="marker_longitude">经度：</string>
	<string name="marker_altitude">海拔：</string>
</resources>
