<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/popupwindow_Button_saveProject"
        android:layout_marginLeft="20dip"  
        android:layout_marginRight="20dip"  
        android:layout_marginTop="10dip" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popupwindow_Button_saveProject" />

    <Button
        android:id="@+id/popupwindow_Button_abandonProject"
        android:layout_marginLeft="20dip"  
        android:layout_marginRight="20dip"  
        android:layout_marginTop="10dip" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popupwindow_Button_abandonProject" />

    <Button
        android:id="@+id/popupwindow_cancelButton"
        android:layout_marginLeft="20dip"  
        android:layout_marginRight="20dip"  
        android:layout_marginTop="10dip" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popupwindow_cancelButton" />

</LinearLayout>
