<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
       <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="10dp"
               android:orientation="horizontal" >

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/marker_number"
                 android:textSize="15sp" />

             <TextView
                 android:id="@+id/marker_number"
                 android:layout_height="wrap_content"
                  android:layout_width="100dp"/>
             
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tv_marker_attribute"
                 android:textSize="15sp" />

             <TextView
                 android:id="@+id/marker_attribute"
                 android:layout_height="wrap_content"
                  android:layout_width="100dp"
                  android:layout_marginRight="16dp"/>
         </LinearLayout>
         
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="10dp"
               android:orientation="horizontal" >

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/marker_latitude"
                 android:textSize="15sp" />

             <TextView
                 android:id="@+id/marker_latitude"
                 android:layout_height="wrap_content"
                  android:layout_width="wrap_content"/>
             </LinearLayout>
             
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="10dp"
               android:orientation="horizontal" >

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/marker_longitude"
                 android:textSize="15sp" />

             <TextView
                 android:id="@+id/marker_longitude"
                 android:layout_height="wrap_content"
                  android:layout_width="wrap_content"/>
             </LinearLayout>
             
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="10dp"
               android:orientation="horizontal" >

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/marker_altitude"
                 android:textSize="15sp" />

             <TextView
                 android:id="@+id/marker_altitude"
                 android:layout_height="wrap_content"
                  android:layout_width="wrap_content"/>
             </LinearLayout>

</LinearLayout>
