<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_marginTop="10dp"
            android:paddingLeft="3dp"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/tv_marker_attribute" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_marginTop="5dp"
             android:spinnerMode="dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:weightSum="2">

        <Button
            android:id="@+id/bt_marker_attribute_confrim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bt_marker_attribute_confrim" />

        <Button
            android:id="@+id/bt_marker_attribute_concel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_weight="1"
            android:text="@string/bt_marker_attribute_concel" />

    </LinearLayout>

</LinearLayout>
