<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >
     
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal" >

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/projectName"
                 android:textSize="15sp" />

             <TextView
                 android:id="@+id/lv_projectName"
                 android:layout_height="wrap_content"
                  android:layout_width="150dp"/>
         </LinearLayout>
         
             <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal" >

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/projectID"
                 android:textSize="15sp" />

             <TextView
                 android:id="@+id/lv_projectID"
                 android:layout_height="wrap_content"
                  android:layout_width="150dp"/>
         </LinearLayout>
         
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"  >

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/projectCreatedTime"
                 android:textSize="15sp" />

             <TextView
                 android:id="@+id/lv_projectCreatedTime"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content" />
       
             </LinearLayout>
             
        </LinearLayout>

        <CheckBox
            android:id="@+id/lv_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_alignParentRight="true"
            android:focusable="false"
            android:layout_marginRight="20dp" />
 
</RelativeLayout>
